# i18next-parser-rs

./: .envrc  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  flake.nix  packages.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yaml  cleanup.yaml  release.yaml  release_assets.yaml  tag.yaml
assets/: file.tsx
assets/locales/en/: default.yml
cldr_pluralrules_parser/benches/: parser.rs
cldr_pluralrules_parser/src/: lib.rs
crates/cldr_pluralrules_parser/: Cargo.toml
crates/cldr_pluralrules_parser/benches/: parser.rs
crates/cldr_pluralrules_parser/src/: ast.rs  lib.rs  parser.rs
crates/cldr_pluralrules_parser/tests/: conditions.rs
crates/core/: catalog.rs  cli.rs  config.rs  file.rs  generate_types.rs  is_empty.rs  macros.rs  main.rs  plural.rs  tests.rs  utils.rs  visitor.rs
crates/core/helper/: clean_multi_line_code.rs  dot_path_to_hash.rs  get_char_diff.rs  merge_hashes.rs  mod.rs
crates/core/merger/: merge_all_values.rs  merge_results.rs
crates/core/parser/: mod.rs  parse_directory.rs  parse_file.rs
crates/core/print/: mod.rs  print_app.rs  print_config.rs  print_count.rs
crates/core/transform/: mod.rs  transform_entries.rs  transform_entry.rs
crates/intl_pluralrules/: Cargo.toml
crates/intl_pluralrules/benches/: pluralrules.rs
crates/intl_pluralrules/src/: lib.rs  operands.rs  rules.rs
crates/intl_pluralrules/tests/: operands.rs
crates/make_pluralrules/: Cargo.toml
crates/make_pluralrules/src/: lib.rs  main.rs
crates/make_pluralrules/src/parser/: gen_pr.rs  gen_rs.rs  plural_category.rs  resource.rs
crates/make_pluralrules/tests/: test.rs
crates/make_pluralrules/tests/fixtures/: cldr_pluralrules_33.rs  cldr_pluralrules_45.rs  cldr_pluralrules_within_test.rs
i18next_parser/: Cargo.toml  generate_types.rs  macros.rs  visitor.rs
i18next_parser/helper/: get_char_diff.rs  merge_hashes.rs
i18next_parser/merger/: merge_results.rs
i18next_parser/parser/: parse_directory.rs  parse_file.rs
i18next_parser/print/: mod.rs  print_config.rs
i18next_parser/src/: cli.rs  main.rs  utils.rs
i18next_parser/tests/: test.rs
i18next_parser/transform/: mod.rs  transfer_values.rs  transform_entries.rs
i18next_parser_core/: Cargo.toml
i18next_parser_core/src/: config.rs  file.rs  generate_types.rs  is_empty.rs  lib.rs  macros.rs  plural.rs  visitor.rs
i18next_parser_core/src/file/: catalog.rs  mod.rs  writer.rs
i18next_parser_core/src/file/parser/: mod.rs  parse_directory.rs  parse_file.rs
i18next_parser_core/src/helper/: clean_multi_line_code.rs  dot_path_to_hash.rs  get_char_diff.rs  merge_hashes.rs  mod.rs  skip_last.rs
i18next_parser_core/src/merger/: merge_all_values.rs  merge_results.rs  mod.rs
i18next_parser_core/src/parser/: parse_directory.rs  parse_file.rs
i18next_parser_core/src/print/: mod.rs  print_config.rs  print_count.rs
i18next_parser_core/src/transform/: mod.rs  transfer_values.rs  transform_entries.rs  transform_entry.rs
i18next_parser_core/src/visitor/: entry.rs  i18n_visitor.rs  mod.rs  node_child.rs  visit.rs
intl_pluralrules/src/: operands.rs  rules.rs
make_pluralrules/: Cargo.toml
make_pluralrules/src/: lib.rs  main.rs
make_pluralrules/src/parser/: gen_pr.rs
src/: catalog.rs  cli.rs  config.rs  file.rs  generate_types.rs  helper.rs  is_empty.rs  macros.rs  main.rs  parser.rs  plural.rs  tests.rs  transform.rs  utils.rs  visitor.rs
src/helper/: clean_multi_line_code.rs  dot_path_to_hash.rs  get_char_diff.rs  log_execution_time.rs  merge_hashes.rs  mod.rs
src/merger/: merge_all_values.rs  merge_results.rs  mod.rs
src/print/: mod.rs  print_app.rs  print_config.rs  print_count.rs
src/transform/: transfer_values.rs  transform_entries.rs  transform_entry.rs
