[package]
name = "i18next-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.4", features = ["unicode", "string", "derive"] }
color-eyre = "0.6.3"
config = "0.14.0"
directories = "5.0.1"
flatten-json-object = "0.6.1"
human-panic = "2.0.0"
lazy_static = "1.4.0"
libc = "0.2.155"
log = "0.4.21"
oxc = "0.13.3"
oxc_allocator = { version = "0.13.3", features = ["serialize"] }
oxc_ast = { version = "0.13.3", features = ["serialize"] }
oxc_parser = "0.13.3"
oxc_span = { version = "0.13.3", features = ["serialize"] }
pretty_assertions = "1.4.0"
regex = "1.10.4"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
strip-ansi-escapes = "0.2.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde", "time"] }
