[package]
name = "i18next-parser"
version = "0.2.0"
edition = "2021"
authors = ["TheYoxy <floryansimar@gmail.com>"]
license = "MIT"
description = "A simple i18next parser"
repository = "https://github.com/TheYoxy/i18next-parser-rs"

[dependencies]
better-panic = "0.3"
clap = { version = "4", features = ["unicode", "string", "derive"] }
color-eyre = "0.6"
config = "0.14"
directories = "5"
flatten-json-object = "0.6"
globset = "0.4"
human-panic = "2"
ignore = "0.4"
lazy_static = "1"
libc = "0.2"
log = "0.4"
oxc = "0.15"
oxc_allocator = "0.15"
oxc_ast = "0.15"
oxc_parser = "0.15"
oxc_span = "0.15"
pretty_assertions = "1"
regex = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
similar = "2.5.0"
simple_logger = "5"
strip-ansi-escapes = "0.2"
tempdir = "0.3"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "serde",
  "time",
] }
