[workspace]
members = ["i18next_parser", "i18next_parser_core", "cldr_pluralrules_parser", "make_pluralrules", "intl_pluralrules"]
default-members = ["i18next_parser", "i18next_parser_core", "intl_pluralrules"]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true
