[package]
name = "i18next-parser"
version = "0.2.2"
edition = "2021"
authors = ["TheYoxy <floryansimar@gmail.com>"]
license = "MIT"
description = "A simple i18next parser"
repository = "https://github.com/TheYoxy/i18next-parser-rs"
include = [
    "src/**/*",
    "Cargo.toml",
    "../README.md"
]
default-run = "i18next-parser"

[[bin]]
bench = false
path = "src/main.rs"
name = "i18next-parser"

[dependencies]
anstyle = "1"
clap = { version = "4", features = ["unicode", "string", "derive"] }
clap_complete = "4"

color-eyre = "0.6"

i18next_parser_core = { path = "../i18next_parser_core" }
better-panic = "0.3"
human-panic = "2"

strip-ansi-escapes = "0.2"

log = "0.4"
tracing = "0.1"
tracing-error = "0.2"
serde = { version = "1.0.204", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "serde",
    "time",
] }

[features]
default = ["generate_types"]
generate_types = ["i18next_parser_core/generate_types"]

[dev-dependencies]
pretty_assertions = "1"
test-log = "0.2"
tempdir = "0.3"
serde_json = "1"
flatten-json-object = "0.6"
