[package]
name = "make_pluralrules"
version = "0.5.0"
edition = "2018"
authors = ["Kekoa Riggin <kekoariggin@gmail.com>", "Zibi Braniecki <zbraniecki@mozilla.com>"]
description = "A Rustcode generator for CLDR plural rules."
license = "Apache-2.0/MIT"
repository = "https://github.com/unclenachoduh/pluralrules"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
include = [
    "src/**/*",
    "benches/*.rs",
    "Cargo.toml",
    "README.md"
]

[[bin]]
bench = false
name = "make_pluralrules"
path = "src/main.rs"


[dependencies]
cldr_pluralrules_parser = { path = "../cldr_pluralrules_parser", version = "2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1"
proc-macro2 = "1"
clap = { version = "4", features = ["derive"] }
unic-langid = "0.9"
color-eyre = "0.6"
strip-ansi-escapes = "0.2"
human-panic = "2"
libc = "0.2"
better-panic = "0.3"

[dev-dependencies]
pretty_assertions = "1"
